# nes-emulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  cmake-multi-platform.yml
src/: main.cpp  nes-emulator.cpp  nes-emulator.h  nes.cpp  nes.h
src/audio/: apu.cpp  apu.h  audio-constants.h  audio-utils.cpp  audio-utils.h  envelope.cpp  envelope.h  frame-counter.cpp  frame-counter.h  length-counter-lookup.h  noise-generator.cpp  noise-generator.h  pulse-wave-generator.cpp  pulse-wave-generator.h  triangle-wave-generator.cpp  triangle-wave-generator.h
src/cartridge/: cartridge.cpp  cartridge.h  mirror-mode.h
src/cartridge/mappers/: mapper-000.cpp  mapper-000.h  mapper-001.cpp  mapper-001.h  mapper-002.cpp  mapper-002.h  mapper-003.cpp  mapper-003.h  mapper.h
src/common/: circular-buffer.h
src/cpu/: cpu-bus.cpp  cpu-bus.h  cpu-common.cpp  cpu-instruction-fragments.cpp  cpu-instructions.cpp  cpu-micro-instructions.cpp  cpu-opcode-switch.cpp  cpu.cpp  cpu.h
src/debug/: logger.cpp  logger.h
src/interfaces/: i-bus.h
src/ppu/: colour-palette.h  ppu-bus.cpp  ppu-bus.h  ppu.cpp  ppu.h
tests/: cpu-tests.cpp
tests/fakes/: fake-cpu-bus.h
